diary_portal/diary/static/diary/timeline.css
ul.nav.nav-tabs{

}
h2{
    font-family: 'Allura';
    font-size: 70px;
}
.title{
    margin-top:70px;
}
.timeline{
    margin-top:40px;
    margin-bottom:40px;
    position:relative;
    box-sizing: border-box;
}
.timeline:before{
    content: '';
    position:absolute;
    left:50%;
    width:2px;
    height:100%;
    background: #c5c5c5;
}
.timeline ul {
    margin:0;
    padding:0;
}
.timeline ul li{
    list-style:none;
    position:relative;
    width:50%;
    padding:20px 40px;
    box-sizing: border-box;
}
.timeline ul li:nth-child(odd){
    float:left;
    text-align:right;
    clear:both;
}
.timeline ul li:nth-child(even){
    float:right;
    text-align:left;
    clear:both;
}
.content {
    padding-bottom: 20px;
    border:1px solid #eee;
    padding: 10px 10px;
    border-radius:5px;
    background:#fff;
    text-align:justify;
}
.timeline ul li:nth-child(odd):before {
    content: '';
    position: absolute;
    top:24px;
    right:-6px;
    width:20px;
    height:20px;
    background:#c23941;
    border-radius:50%;
    box-shadow: 0 0 0 3px rgba(233,33,99,0.2);
}
.timeline ul li:nth-child(even):before {
    content:'';
    position:absolute;
    top:24px;
    left:-4px;
    width:20px;
    height:20px;
    background:#c23941;
    border-radius:50%;
    box-shadow: 0 0 0 3px rgba(233,33,99,0.2);
}
.timeline ul li p{
    margin: 10px 0 0;
    padding:0;
    line-height:1.7;
}
.timeline ul li:nth-child(odd) .time{
    position:absolute;
    top:17px;
    right: - 165px;
    margin:0;
    padding:8px 16px;
    background: #303249;
    color:#fff;
    border-radius: 18px;
}
.timeline ul li:nth-child(even) .time{
    position:absolute;
    top:17px;
    left: - 165px;
    margin:0;
    padding:8px 16px;
    background: #303249;
    color:#fff;
    border-radius: 18px;
}

